# python-sdnotify

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
sdnotify/: __init__.py
